# git-blame-poet

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/git_blame_poet/: __init__.py  __main__.py  blame_parser.py  cli.py  poet.py
tests/: test_blame_parser.py
